--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,4 +1,7 @@
 .element__image {
     border-radius: 10px 10px 0 0;
-    max-width: 100%;
+    min-width: 282px;
+    min-height: 282px;
+    height: 100%;
+    width: 100%;
 }
