--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -3,14 +3,13 @@
     padding: 0;
     width: 32px;
     height: 32px;
-    right: 0;
-    top: 0;
+    right: -40px;
+    top: -40px;
     background-color: transparent;
     background-image: url(../../../image/close-icon.svg);
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
-    transform: translate(40px, -40px);
     border: none;
     cursor: pointer;
   }
@@ -24,6 +23,7 @@
     .popup__close {
       width: 20px;
       height: 20px;
-      transform: translate(0, -36px);
+      top: -36px;
+      right: 0;
     }
   }
