--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -2,11 +2,17 @@
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   font-size: 14px;
-  line-height: calc(17 / 14);
-  padding: 0 0 13px;
+  line-height: 17px;
+  padding: 0 0 10px;
   outline-color: transparent; 
 }
 
 .popup__input:last-of-type {
-  margin: 30px 0 0;
+  margin: 30px 0 48px;
+}
+
+@media screen and (max-width: 768px) {
+  .popup__input:last-of-type {
+    margin: 30px 0 45px;
+  }
 }
