--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -2,10 +2,13 @@
     position: fixed;
     display: none;
     margin: 0;
-    top:0;
+    top: 0;
+    right: 0;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
     font-family: "Inter", 'Arial', sans-serif;
+    justify-content: center;
+    align-items: center;
   }
   
