--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,9 +1,10 @@
 .profile__add-button {
     width: 150px;
     height: 50px;
-    background-color: #000;
+    background-color: transparent;
     border: 2px solid #fff;
-    background-image: url(../../../image/add.png);
+    border-radius: 2px;
+    background-image: url(../../../image/add.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 22px;
@@ -18,5 +19,6 @@
 @media screen and (max-width: 768px) {
     .profile__add-button {
       width: 282px;
+      background-size: 16px;
     }
 }
