--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,7 +1,7 @@
 .profile__edit-button {
     width: 24px;
     height: 24px;
-    background-color: #000;
+    background-color: transparent;
     border: 1px solid #fff;
     background-image: url(../../../image/bg-edit.svg);
     background-repeat: no-repeat;
@@ -13,4 +13,12 @@
 .profile__edit-button:hover {
     opacity: 0.6;
     transition: opacity 0.6s;
+}
+
+@media screen and (max-width: 768px) {
+    .profile__edit-button {
+      width: 18px;
+      height: 18px;
+      background-size: 7.5px;
+    }
 }
