--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -11,7 +11,7 @@
     .profile__info {
       grid-template-columns: minmax(min-content, max-content);
       justify-items: center;
-      row-gap: 14px;
+      row-gap: 0;
       padding: 0 0 36px 0;
     }
   }
