--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,6 +1,6 @@
 .profile__name {
     margin: 0;
-    max-width: 500px;
+    max-width: 305px;
     font-weight: 500;
     font-size: 42px;
     line-height: 48px;
@@ -14,7 +14,7 @@
     .profile__name {
       max-width: 250px;
       font-size: 27px;
-      line-height: calc(33 / 27);
-      padding: 12px 0 0 0;
+      line-height: 33px;
+      padding: 26px 0 0 0;
     }
   }
