--- a/pages/index.css
+++ b/pages/index.css
@@ -32,7 +32,9 @@
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__info/element__info.css);
 @import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__like/_active/element__like_active.css);
 @import url(../blocks/element/__name/element__name.css);
+@import url(../blocks/element/__delete-button/element__delete-button.css);
 
 /* Footer */
 @import url(../blocks/footer/footer.css);
@@ -47,3 +49,7 @@
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__submit/popup__submit.css);
 @import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/_photo/popup_photo.css);
+@import url(../blocks/popup/__image-container/popup__image-container.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__text/popup__text.css);
