--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,7 +1,10 @@
 .element__image {
     border-radius: 10px 10px 0 0;
-    min-width: 282px;
-    min-height: 282px;
-    height: 100%;
-    width: 100%;
+    height: 282px;
+    width: 282px;
+    object-fit: cover;
 }
+
+.element__image:hover {
+    cursor: pointer;
+  }
