--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,6 +1,9 @@
 .popup {
     position: fixed;
-    display: none;
+    display: flex;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility .5s, opacity .5s ease-in-out;
     margin: 0;
     top: 0;
     right: 0;
