--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -7,7 +7,7 @@
   outline-color: transparent; 
 }
 
-.popup__input:last-of-type {
+/* .popup__input:last-of-type {
   margin: 30px 0 48px;
 }
 
@@ -15,4 +15,4 @@
   .popup__input:last-of-type {
     margin: 30px 0 45px;
   }
-}
+} */
