--- a/src/blocks/elements/__group/elements__group.css
+++ b/src/blocks/elements/__group/elements__group.css
@@ -5,7 +5,7 @@
     column-gap: 17px;
     row-gap: 20px;
     max-width: 100%;
-    justify-items: center;
+    justify-items: flex-start;
     margin: 0;
     padding: 0;
     align-content: center;
