--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -35,6 +35,9 @@
 @import url(../blocks/element/__like/_active/element__like_active.css);
 @import url(../blocks/element/__name/element__name.css);
 @import url(../blocks/element/__delete-button/element__delete-button.css);
+@import url(../blocks/element/__like-container/element__like-container.css);
+@import url(../blocks/element/__likes-value/element__likes-value.css);
+@import url(../blocks/element/__delete-button/_disabled/element__delete-button_disabled.css);
 
 /* Footer */
 @import url(../blocks/footer/footer.css);
