--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -60,4 +60,4 @@
 @import url(../blocks/popup/__input-error/popup__input-error.css);
 @import url(../blocks/popup/__input-error/_active/popup__input-error_active.css);
 @import url(../blocks/popup/__submit/_disabled/popup__submit_disabled.css);
-
+@import url(../blocks/popup/__submit-yes/popup__submit-yes.css);
